--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -3,8 +3,14 @@
     margin-left:40vw;
     margin-top:1.5vw;
 }
+.links{
+    text-decoration: none;
+}
 .alloffers{
     font-size:1vw;
+    color:black;
+    text-decoration: none;
+    font-weight: 700;
 }
 .search_but{
     background:rgba(255, 255, 255, 0);
@@ -61,10 +67,11 @@
 .first_ul{
         list-style:none;
         transition:1s;
+       
         background:white;
      border:0.3vw solid white;
         width:3vw;
-        
+        padding-right:1vw;
         border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
 }
 
@@ -75,26 +82,31 @@
    position:relative;
    position:absolute;
    width:10vw;
-  
+   transition:1s;
 
 }
 .btnspan{
     display:inline-block;
     display:flex;
-    position:absolute;
-    margin-left:3vw;
+   
+    
     background:white;
     align-items: center;
-    margin-left:9vw;
+    transition:1s;
     margin-top:21vw;
-    border-radius:50vw;
+    margin-left:-0.5vw;
+    border-bottom-right-radius:50vw;
+    border-top-right-radius:50vw;
     width:2vw;height:2vw;
-    padding:1vw;
+    padding-right:0.7vw;
     padding-top:0.7vw;
     padding-bottom:0.7vw;
 }
 .toggle_but{
     transition:1s;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     width:2vw;
     height:2vw;
     background-color:white;border-radius:50vw;border:0.2vw solid #8F00FF;
@@ -102,8 +114,9 @@
 .list2{
     list-style:none;  background:white;
     transition:1s;
+ margin-left:-1vw;
  
-    width:9vw;
+    width:12vw;
     border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
 }
 .list2img{
@@ -112,8 +125,32 @@
 }
 .list2offer{
     width:2vw;
+
     margin-right:0.5vw;
     height:2vw;
+}
+.li{
+    display:flex;
+     margin-top:1vw;
+    align-items: center;
+    margin-left:-2vw;
+    justify-content: center;
+}
+.li2{
+    display:flex;
+    padding-left:1vw;margin-left:-1vw;
+    align-items: center;
+}
+.li:hover{
+    border-radius: 10px;
+    cursor: pointer;
+background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
+}
+.li2:hover{
+    border-radius: 10px;color:white;
+    margin-right:1vw;cursor: pointer;
+    padding-left:1vw;
+background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
 }
 .search{
     width:25vw;
@@ -127,10 +164,11 @@
 }
 .tiki{
     width:1.6vw;
+    height:2.5vw;
     margin-left:3vw;
 }
 .noti{
-    width:1.6vw;
+    width:1.6vw;height:2.5vw;
     margin-left:1vw;
 }
 
@@ -144,15 +182,25 @@
     width:4vw;
     height:4vw;margin-left:-2vw;
 }
+.plus360text{
+    background: linear-gradient(180deg, #FF8201 0%, #FFD600 100%);
+
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-size:1vw;
+font-weight: 900;
+}
 .big360img{
     width:8vw;
     height:5vw;
 }
 .chevron{
-    color:#8F00FF ;fontSize:1vw;
+    color:#8F00FF ;font-size:1vw;
 }
 .hamburger{
     display:none;
+    
 }
 @media only screen and (max-width: 800px) {
     .first_ul{
@@ -181,6 +229,7 @@
     }
     .noti{
         width:30vw;
+        height:10vw;
         margin-top:2vw;
         margin-right:-10vw;
     }
@@ -188,24 +237,32 @@
         width:45vw;
         height:30vw;
         margin-top:-6vw;
+    }.plus360text{
+        font-size:5vw;
     }
     .chevron{
         display:none;
     }
     .hamburger{
         display:block;
-        font-size:10vw;
+        width:10vw;
+        height:10vw;
+        font-size:100vw;
+        
+           margin-top:-27vw;
+           margin-left:-3vw;
         color:#8F00FF;  
     }
     .btnspan{
         background:rgba(255, 255, 255, 0);
         border:none;
+        position:absolute;
     }
     .toggle_but{
         background:rgba(255, 255, 255, 0);
         border:none;
-        margin-left:-7vw;
-        margin-top:-36vw;
+        margin-left:10vw;
+       
         
     }
     .search_icon{
@@ -219,7 +276,7 @@
     }
     .list2{
         width:50vw;
-        height:170vw;
+        height:100%;
         margin-top:15vw;
         border-top-right-radius: 10vw;
         border-bottom-right-radius:10vw;
