--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,3 +1,22 @@
+.tabicons{
+    display:flex;
+    margin-top:2vw;
+    align-items: center;
+    padding-bottom:2vw;
+    gap:0.8vw;
+  }
+  .tabicons1{
+    display:flex;
+    flex-direction: column;
+    gap:1vw;
+    margin-top:3vw;
+    margin-left:-0.5vw;
+  }
+  .tabicon{
+    width:1.7vw;
+    cursor:pointer;
+    height:1.7vw;
+  }
 .navbar{
     display:flex;
     margin-left:40vw;
@@ -92,24 +111,28 @@
     
     background:white;
     align-items: center;
-    transition:1s;
+
     margin-top:21vw;
-    margin-left:-0.5vw;
-    border-bottom-right-radius:50vw;
-    border-top-right-radius:50vw;
+    margin-left:-1vw;
+    border-bottom-right-radius:2vw;
+    border-top-right-radius:2vw;
     width:2vw;height:2vw;
-    padding-right:0.7vw;
-    padding-top:0.7vw;
-    padding-bottom:0.7vw;
+    padding-right:0.5vw;
+    padding-top:0.5vw;
+    padding-bottom:0.5vw;
 }
 .toggle_but{
-    transition:1s;
+  
     display:flex;
     align-items: center;
+    
     justify-content: center;
-    width:2vw;
-    height:2vw;
+    width:1.7vw;
+    height:1.7vw;
     background-color:white;border-radius:50vw;border:0.2vw solid #8F00FF;
+}
+.chevron{
+    font-size:5vw;
 }
 .list2{
     list-style:none;  background:white;
@@ -196,7 +219,8 @@ font-weight: 900;
     height:5vw;
 }
 .chevron{
-    color:#8F00FF ;font-size:1vw;
+    color:#8F00FF ;
+    font-size:5vw;
 }
 .hamburger{
     display:none;
@@ -284,6 +308,15 @@ font-weight: 900;
     }
     .alloffers{
         font-size:5vw;
+    }
+    .tabicons{
+         gap:4vw;
+         padding-bottom:0vw;
+         margin-top:15vw;
+    }
+    .tabicon{
+        width:8vw;
+        height:8vw;
     }
     .list2offer{
         width:10vw;
