--- a/pages/categories/fitness/css.module.css
+++ b/pages/categories/fitness/css.module.css
@@ -15,6 +15,7 @@
     border:0.2vw solid black;
     border-radius:50vw;
     padding:0;
+     margin-right:13vw;
     height:3.99vw;
     margin-left:1vw;
     color:black;
@@ -25,7 +26,12 @@
    list-style:none;
    text-decoration: none;
    color:black;
-
+   width:22vw;
+   height:17vw;
+   padding:-5vw;
+   display:flex;
+   flex-wrap:wrap;
+   
    
    
 }
@@ -40,15 +46,17 @@
     
 }.card_p{
   display:inline-block;
-  margin:0;
+  
   padding:0;
-    margin-top:-0.5vw;
+  margin-top:-1vw;
     color:black;
   margin-left:1vw;
 }
 .but_div{
     margin-left:1vw;
-    margin-top:1vw;
+    display:flex;
+    padding-bottom:2vw;
+  height:1vw;
     
 }
 .percent{
@@ -59,9 +67,12 @@
     font-size:1.4vw;text-decoration: none;
     color:#B179F4;  
     border-radius:0.3vw;
+    height:2vw;
 }
 .but_div button{
     padding:0.5vw;
+    
+    height:2.5vw;
 }
 .woltbut{
     background:#E3E2E3;
@@ -77,10 +88,23 @@
 .but_div button{
     margin-right:1vw;
     padding-left:1vw;
+    font-size:1.2vw;
     padding-right:1vw;
 }
 .card_p p{
-    margin-top:-1.3vw;
+    
+    font-size:1.5vw;
+    margin-top:-1.5vw;
+}
+.cardtop{
+    display:flex;
+    
+   flex-direction: row;
+   align-items: center;
+    
+}
+.card_p h3{
+    font-size:1.5vw;
 }
 
 .card_pp{
@@ -88,30 +112,76 @@
     border-radius:50vw;
     height:4vw;
 }
+
 .bookmarkcard{
     width:2.5vw;
-    margin-left:13vw;
+    height:2.5vw;
     margin-top:-2vw;
-    
+    margin-bottom:0;
+
 }
-.card{
-    width:22vw;
-    height:17vw;
-    
-}
+
 .card_div{
     display:flex;
     flex-wrap: wrap;
     gap:3vw;
+}
+.banner{
+    width:88vw;height:19vw;margin-left:-8vw;
 }
 @media only screen and (max-width: 800px) {
     .footer{
         display:none;
     }
     .card{
-        width:60vw;margin-left:-5vw;
-        height:50vw;
+        width:40vw;margin-left:-5vw;
+        height:40vw;
         
     }
-
+    .card_div{
+        justify-content: center;
+        gap:10vw;
+    }
+    .ppdiv{
+        width:10vw;
+        height:10vw;
+        
+        margin-right:21vw;
+    }
+    .bookmarkcard{
+        margin-top:-9vw;
+        width:7vw;
+        height:7vw;
+    }
+    .cardtop{
+        margin-top:3vw;
+    }
+    .card_pp{
+        width:10vw;
+        height:10vw;
+    }
+    .percent{
+        font-size:4vw;
+        height:5vw;
+    }
+    
+    .but_div button{
+        font-size:3.5vw;
+        height:5vw;
+        border-radius:1.5vw;
+    }
+    .card_p h3{
+        margin-top:1vw;
+        font-size:4vw;
+        margin-bottom:2vw;
+    }
+    .card_p p{
+        font-size:2.5vw;
+        margin-top:-2vw;
+    }
+   .banner{
+    width:120vw;
+    margin-left:-20vw;
+    height:30vw;
+   }
 }
