--- a/pages/home/home.module.css
+++ b/pages/home/home.module.css
@@ -3,6 +3,10 @@
 .body{
     display:flex;
 }
+.mobilebanner{
+    display:none;
+    
+}
 .footer{
     width:100%;
     height:100%;
@@ -163,6 +167,8 @@
     .percent{
         font-size:4vw;
         height:5vw;
+        margin-right:0.6vw;
+        border-radius: 1.5vw;
     }
     
     .but_div button{
@@ -179,9 +185,15 @@
         font-size:2.5vw;
         margin-top:-2vw;
     }
+ 
+   .mobilebanner{
+    display:block;
+    width:100vw;
+    height:43vw;
+    margin-left:-11vw;
+   }
    .banner{
-    width:120vw;
-    margin-left:-20vw;
-    height:30vw;
+    display:none;
+ 
    }
 }
