--- a/pages/categories/technology/css.module.css
+++ b/pages/categories/technology/css.module.css
@@ -3,6 +3,10 @@
 .body{
     display:flex;
 }
+.mobilebanner{
+    display:none;
+    
+}
 .footer{
     width:100%;
     height:100%;
@@ -32,7 +36,7 @@
    display:flex;
    flex-wrap:wrap;
    
-   
+   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
    
 }
 .main_container{
@@ -134,54 +138,79 @@
         display:none;
     }
     .card{
-        width:40vw;margin-left:-5vw;
-        height:40vw;
-        
+        width:53vw;
+        height:40vw; margin-left:-1vw;
+        border-radius:4vw;
     }
     .card_div{
         justify-content: center;
-        gap:10vw;
+        gap:7vw;
+        margin-left:-20vw;
+    margin-right:-20vw;
     }
     .ppdiv{
         width:10vw;
         height:10vw;
         
-        margin-right:21vw;
+        
+        margin-right:30vw;
     }
     .bookmarkcard{
-        margin-top:-9vw;
+        margin-top:-5vw;
         width:7vw;
         height:7vw;
     }
     .cardtop{
-        margin-top:3vw;
+        margin-top:1vw;
+        margin-left:2vw;
+        
     }
     .card_pp{
         width:10vw;
         height:10vw;
     }
     .percent{
-        font-size:4vw;
-        height:5vw;
+        font-size:3vw;
+        display: flex;align-items: center;
+        justify-content: center;
+        height:5vw;font-weight: 900;
+        margin-right:0.6vw;
+        border-radius: 1.1vw;
+        margin-left:12vw;
     }
-    
+    .but_div{
+        margin-left:3vw;
+    }
     .but_div button{
-        font-size:3.5vw;
+        font-size:3vw;
+        padding:2vw;
+        display: flex;
+        align-items: center;
         height:5vw;
-        border-radius:1.5vw;
+        border-radius:1.1vw;
     }
     .card_p h3{
         margin-top:1vw;
         font-size:4vw;
         margin-bottom:2vw;
     }
+    .card_p{
+        margin-left:3vw;
+        margin-top:3vw;
+    }
     .card_p p{
         font-size:2.5vw;
         margin-top:-2vw;
     }
+ 
+   .mobilebanner{
+    display:block;
+    width:100vw;
+    height:43vw;
+    margin-left:-11vw;
+   }
    .banner{
-    width:120vw;
-    margin-left:-20vw;
-    height:30vw;
+    display:none;
+ 
    }
 }
