--- a/pages/home/home.module.css
+++ b/pages/home/home.module.css
@@ -124,7 +124,9 @@
     margin-bottom:0;
 
 }
-
+.categories_div{
+    display:none;
+}
 .card_div{
     display:flex;
     flex-wrap: wrap;
@@ -133,9 +135,38 @@
 .banner{
     width:88vw;height:19vw;margin-left:-8vw;
 }
+
+.mobweekbest{
+    display:none;
+}
+.add2mob{
+    display:none;
+}
+.deskweekbest{
+    display:block;
+    display:flex;
+    flex-direction: column;
+    align-items: center;margin-left:4vw;
+    font-size:1.9vw;
+    font-weight: 700;
+   }
+   .deskweekbest p{
+    margin-left:-20vw;
+   }
+   .mobfooter{
+    display:none;
+   }
 @media only screen and (max-width: 800px) {
     .footer{
         display:none;
+    }
+    .mobfooter{
+        display:block;
+        width:120vw;
+    height:100%;
+    bottom:0vw;
+    z-index:-1;
+    position:relative;
     }
     .card{
         width:53vw;
@@ -164,6 +195,50 @@
         margin-top:1vw;
         margin-left:2vw;
         
+    }
+    .categories_div{
+        display:block;
+        display:flex;align-items: left;flex-direction: column;margin-left:-9vw;
+    }
+    .categories_div>p{
+        font-size:6vw;
+        font-family: 'DM Sans', sans-serif; 
+        font-weight: 800;
+    }
+    .category_div{
+        width:10vw;
+        
+        
+        height:10vw;
+     
+    }
+    .category_li{
+        border:1px solid #969696;
+        border-radius:15vw;
+        display:flex; align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        padding:4vw;
+    }
+    .categories_li{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .categories_ul{
+        display:flex;
+        align-items: center;
+        gap:3vw;
+      margin-left:-10vw;
+      margin-top:-3vw;
+        list-style: none;
+        flex-direction: row;
+    }
+    .category_p{
+        font-size:3.5vw;
+        margin-top:1vw;
+        font-weight:800;
     }
     .card_pp{
         width:10vw;
@@ -212,5 +287,22 @@
    .banner{
     display:none;
  
+   }
+   .deskweekbest{
+    display:none;
+   }
+   .mobweekbest{
+    display:block;
+    display:flex;
+    flex-direction: column;
+    align-items: left;margin-left:-10vw;
+    font-size:5vw;
+    font-weight: 800;
+   }
+   .add2desk{
+    display:none;
+   }
+   .add2mob{
+    display:block;
    }
 }
