--- a/components/navbar&toggle/profile_nav&toggle/pnavbar.module.css
+++ b/components/navbar&toggle/profile_nav&toggle/pnavbar.module.css
@@ -258,6 +258,10 @@ font-weight: 900;
     }
     .navbar{
         position:relative;
+        
+    }
+    .form{
+        margin-left:-10vw;
     }
     .bookmarkmob{
         display:block;
@@ -280,10 +284,10 @@ font-weight: 900;
     .search{
         font-size:5vw;
         height:8vw;
-        width:45vw;position:relative;
+        width:48vw;position:relative;
         margin-left:-11vw;
       z-index:-1;
-        border-radius:4vw;
+        border-radius:3vw;
         margin-top:2vw;
     }
   
@@ -295,14 +299,19 @@ font-weight: 900;
         
         height:6vw;
         margin-top:3vw;
-        margin-left:3vw;
+        margin-left:5vw;
         margin-right:3vw;
     }
     .prof{
         display:none;
     }
+    .X{
+        width:12vw;
+        height:12vw;
+        margin-right:3vw;
+    }
     .profmob{
-        display:block;
+        display:none;
         width:14vw;
         height:14vw;
      
@@ -319,7 +328,7 @@ font-weight: 900;
         height:8vw;
         font-size:100vw;
           z-index:122;
-           margin-top:-27vw;
+           margin-top:-40vw;
            margin-left:-3vw;
         color:#8F00FF;  
     }
@@ -339,7 +348,7 @@ font-weight: 900;
         width:6vw;
         height:6vw;
         color:rgba(0, 0, 0, 0.505);
-        top:-7.5vw; left:-2vw;
+        top:1.5vw; left:-41vw;
     }
     .search_but{
         font-size:0.7vw;
@@ -352,16 +361,17 @@ font-weight: 900;
     .list2{
         width:50vw;
         text-decoration: none;
-        height:240vh;
-        margin-top:20vw;
+        height:220vw;
+        margin-top:13vw;
         border-top-right-radius: 10vw;
         border-bottom-right-radius:10vw; position:absolute;z-index:0;
     }
     .list2div{
-        width:120vw;
+        width:110vw;
+       
         background: rgba(255, 255, 255, 0.2); 
   backdrop-filter: blur(8px); 
-        height:350vh;
+        height:200vw;
         position:absolute;z-index:11;
     }
     .alloffers{
@@ -385,6 +395,6 @@ font-weight: 900;
         height:20vw;
     }
     .navbar{
-        margin-top:7vw;
+        margin-top:3vw;
     }
 }
