--- a/pages/register/register.module.css
+++ b/pages/register/register.module.css
@@ -4,7 +4,11 @@
 }
 
 .body{
-    background:#EBDEE5;
+  background-image: url('/loginback.svg');
+  background-size: cover;
+  background-position: center;
+
+  background-attachment: fixed;
     width:100%;
     height:100vw;
     background-size:cover;
@@ -16,6 +20,11 @@
     .body{
         width:100vw;
         height:100vw;
+        background-image: url('/mobilelogin.svg');
+        background-size: cover;
+        background-position: center;
+      
+        background-attachment: fixed;
     }
   }
 @media only screen and (max-width: 1288px) {
