--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -31,13 +31,6 @@
     text-decoration: none;
     font-weight: 700;
 }
-.li2:hover .list2offer{
-    -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
-    filter: invert(100%);
-}
-.li2:hover .alloffers{
-    color:white;
-}
 .search_but{
     background:rgba(255, 255, 255, 0);
     border:none;
@@ -105,8 +98,8 @@
    display:flex;
    transition:1s;
  margin-top:-1vw;
+   position:relative;
    position:absolute;
-z-index:1;
    width:10vw;
    transition:1s;
 
@@ -119,7 +112,7 @@ z-index:1;
     background:white;
     align-items: center;
 
-    margin-top:26vw;
+    margin-top:21vw;
     margin-left:-1vw;
     border-bottom-right-radius:2vw;
     border-top-right-radius:2vw;
@@ -145,16 +138,13 @@ z-index:1;
     list-style:none;  background:white;
     transition:1s;
  margin-left:-1vw;
- z-index:1;
+ 
     width:12vw;
     border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
 }
 .list2img{
     width:6vw;
     height:3vw;
-}
-.profmob{
-    display:none;
 }
 .list2offer{
     width:2vw;
@@ -195,16 +185,10 @@ background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
     height:3vw;
     
 }
-.bookmarkmob{
-    display:none;
-}
 .tiki{
     width:1.6vw;
     height:2.5vw;
     margin-left:3vw;
-}
-.tikimob{
-    display:none;
 }
 .noti{
     width:1.6vw;height:2.5vw;
@@ -249,28 +233,7 @@ font-weight: 900;
     .tiki{
         display:none;
     }
-    .tikimob{
-        display:block;
-        margin-left:3vw;
-        width:11vw;
-        height:11vw;
-        
-    }
-    .navbar{
-        position:relative;
-    }
-    .bookmarkmob{
-        display:block;
-        z-index:0;
-        width:6.5vw;
-        height:6.5vw;
-        position:absolute;
-        left:-23.5vw;
-        top:1.5vw;
-       border:0.5vw solid #8F00FF;
-       border-radius:3vw;
-       padding:1vw;
-    }
+    
     .feedback{
         display:none;
     }
@@ -280,33 +243,24 @@ font-weight: 900;
     .search{
         font-size:5vw;
         height:8vw;
-        width:45vw;position:relative;
-        margin-left:-11vw;
-      z-index:-1;
-        border-radius:4vw;
+        width:45vw;
+        margin-right:-10vw;
+        border-radius:2vw;
         margin-top:2vw;
     }
-  
     .language{
         display:none;
     }
     .noti{
-        width:6vw;
-        
-        height:6vw;
-        margin-top:3vw;
-        margin-left:3vw;
-        margin-right:3vw;
+        width:30vw;
+        height:10vw;
+        margin-top:2vw;
+        margin-right:-10vw;
     }
     .prof{
-        display:none;
-    }
-    .profmob{
-        display:block;
-        width:14vw;
-        height:14vw;
-     
-        margin-top:-1vw;
+        width:45vw;
+        height:30vw;
+        margin-top:-6vw;
     }.plus360text{
         font-size:5vw;
     }
@@ -315,10 +269,10 @@ font-weight: 900;
     }
     .hamburger{
         display:block;
-        width:8vw;
-        height:8vw;
+        width:10vw;
+        height:10vw;
         font-size:100vw;
-          z-index:122;
+        
            margin-top:-27vw;
            margin-left:-3vw;
         color:#8F00FF;  
@@ -336,14 +290,9 @@ font-weight: 900;
         
     }
     .search_icon{
-        width:6vw;
-        height:6vw;
-        color:rgba(0, 0, 0, 0.505);
-        top:-7.5vw; left:-2vw;
-    }
-    .search_but{
-        font-size:0.7vw;
-        margin-left:-7.5vw;
+        width:9vw;
+        height:9vw;
+        top:-8.5vw;right:-14vw;
     }
     .list2img{
         width:30vw;
@@ -352,17 +301,10 @@ font-weight: 900;
     .list2{
         width:50vw;
         text-decoration: none;
-        height:240vh;
-        margin-top:20vw;
+        height:100%;
+        margin-top:15vw;
         border-top-right-radius: 10vw;
-        border-bottom-right-radius:10vw; position:absolute;z-index:0;
-    }
-    .list2div{
-        width:120vw;
-        background: rgba(255, 255, 255, 0.2); 
-  backdrop-filter: blur(8px); 
-        height:350vh;
-        position:absolute;z-index:11;
+        border-bottom-right-radius:10vw;
     }
     .alloffers{
         font-size:5vw;
@@ -383,8 +325,5 @@ font-weight: 900;
     .big360img{
         width:30vw;
         height:20vw;
-    }
-    .navbar{
-        margin-top:7vw;
     }
 }
