--- a/components/navbar&toggle/navbar.module.css
+++ b/components/navbar&toggle/navbar.module.css
@@ -1,400 +1,559 @@
-.tabicons{
-    display:flex;
-    margin-top:2vw;
+.tabicons {
+    display: flex;
+    margin-top: 2vw;
     align-items: center;
-    padding-bottom:0.5vw;margin-top:7vw;margin-left:0.8vw;
-    gap:0.8vw;
-  }
-  .tabicons1{
-    display:flex;
-    flex-direction: column;
-    gap:1vw;
-    margin-top:3vw;
-    margin-left:-0.5vw;
-  }
-  .tabicon{
-    width:1.7vw;
-    cursor:pointer;
-    height:1.7vw;
-  }
-.navbar{
-    display:flex;
-    margin-left:40vw;
-    margin-top:1.5vw;
+    padding-bottom: 0.5vw;
+    margin-top: 7vw;
+    margin-left: 0.8vw;
+    gap: 0.8vw;
 }
-.links{
+
+.tabicons1 {
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
+    margin-top: 3vw;
+    margin-left: -0.5vw;
+}
+
+.tabicon {
+    width: 1.7vw;
+    cursor: pointer;
+    height: 1.7vw;
+}
+
+.navbar {
+    display: flex;
+    margin-left: 40vw;
+    margin-top: 1.5vw;
+}
+
+.links {
     text-decoration: none;
 }
-.alloffers{
-    font-size:1vw;
-    color:black;
+
+.alloffers {
+    font-size: 1vw;
+    color: black;
     text-decoration: none;
     font-weight: 700;
 }
-.li2:hover .list2offer{
-    -webkit-filter: invert(100%);
-    filter: invert(100%);
-}
-.li:hover .logoImg{
+
+.li2:hover .list2offer {
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
 
-.li2:hover .alloffers{
-    color:white;
+.li:hover .logoImg {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
-.search_but{
-    background:rgba(255, 255, 255, 0);
-    border:none;
-    
+
+.li2:hover .alloffers {
+    color: white;
 }
-.search_icon{
-    width:2vw;
-    height:2vw;
-    position:relative;
-    right:4vw;
-    top:0.7vw;
-    cursor:pointer;
+
+.search_but {
+    background: rgba(255, 255, 255, 0);
+    border: none;
+
 }
-.favourites{
-    display:flex;
-    background:white;margin-top:0.2vw;
-    margin-left:1vw;
-    font-size:1.1vw;
-    border:0.2vw solid #8F00FF;
+
+.search_icon {
+    width: 2vw;
+    height: 2vw;
+    position: relative;
+    right: 4vw;
+    top: 0.7vw;
+    cursor: pointer;
+}
+
+.favourites {
+    display: flex;
+    background: white;
+    margin-top: 0.2vw;
+    margin-left: 1vw;
+    font-size: 1.1vw;
+    border: 0.2vw solid #8F00FF;
     align-items: center;
-    border-radius:0.7vw;
-    height:2.5vw;
+    border-radius: 0.7vw;
+    height: 2.5vw;
 }
-.bookmarkimg{
-    width:1.5vw;
-    height:1.5vw;
+
+.bookmarkimg {
+    width: 1.5vw;
+    height: 1.5vw;
 }
-.feedback{
+
+.feedback {
     background: linear-gradient(90deg, #8F00FF 1.57%, #BD00FF 100%);
-    color:white;
-    margin-top:0.2vw;
-    border:none;margin-left:13vw;
-    height:2.5vw;
-    border-radius:0.5vw;
-    font-size:1.1vw;cursor: pointer;
-    padding-left:1vw;
-    padding-right:1vw;
-}
-.language{
-    border:none;
-    width:4vw;color:rgba(0, 0, 0, 0.614);
-    font-size:1.4vw;
-    border-radius:0.2vw;
-    margin-left:-2.5vw;
-    height:3.2vw;
+    color: white;
+    margin-top: 0.2vw;
+    border: none;
+    margin-left: 13vw;
+    height: 2.5vw;
+    border-radius: 0.5vw;
+    font-size: 1.1vw;
+    cursor: pointer;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
-.logoImg{
-    width:2vw;
-
-    height:3vw;
+.language {
+    border: none;
+    width: 4vw;
+    color: rgba(0, 0, 0, 0.614);
+    font-size: 1.4vw;
+    border-radius: 0.2vw;
+    margin-left: -2.5vw;
+    height: 3.2vw;
 }
 
-.first_ul{
-        list-style:none;margin-top:0vw;
-        transition:1s; height:100%!;
-       display:flex;flex-direction: column; align-items: center;
-        background:white;
-     border:0.3vw solid white;
-        width:5vw;
-       padding:0vw;
-        border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
+.logoImg {
+    width: 2vw;
+
+    height: 3vw;
 }
 
-.togglediv{
-   display:flex;
-   transition:1s;
+.first_ul {
+    list-style: none;
+    margin-top: 0vw;
+    transition: 1s;
+    height: 100% !;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    border: 0.3vw solid white;
+    width: 5vw;
+    padding: 0vw;
+    border-top-right-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+}
 
-   position:fixed;
-z-index:1;
-padding:0;
-   transition:1s;
+.togglediv {
+    display: flex;
+    transition: 1s;
+
+    position: fixed;
+    z-index: 1;
+    padding: 0;
+    transition: 1s;
 
 }
-.btnspan{
-    display:inline-block;
-    display:flex;
-   
-    
-    background:white;
+
+.btnspan {
+    display: inline-block;
+    display: flex;
+
+
+    background: white;
     align-items: center;
 
-    margin-top:26vw;
-    margin-left:-1vw;
-    border-bottom-right-radius:2vw;
-    border-top-right-radius:2vw;
-    width:2vw;height:2vw;
-    padding-right:0.5vw;
-    padding-top:0.5vw;
-    padding-bottom:0.5vw;
+    margin-top: 26vw;
+    margin-left: -1vw;
+    border-bottom-right-radius: 2vw;
+    border-top-right-radius: 2vw;
+    width: 2vw;
+    height: 2vw;
+    padding-right: 0.5vw;
+    padding-top: 0.5vw;
+    padding-bottom: 0.5vw;
 }
-.toggle_but{
-  
-    display:flex;
+
+.toggle_but {
+
+    display: flex;
     align-items: center;
-    
+
     justify-content: center;
-    width:1.7vw;
-    height:1.7vw;
-    background-color:white;border-radius:50vw;border:0.2vw solid #8F00FF;
+    width: 1.7vw;
+    height: 1.7vw;
+    background-color: white;
+    border-radius: 50vw;
+    border: 0.2vw solid #8F00FF;
 }
-.chevron{
-    font-size:5vw;
-}
-.list2{
-    list-style:none;  background:white;
-    transition:1s;height:100% !important;
- margin-top:0vw;
- z-index:1;
-    padding-left:1vw;
-    border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
-}
-.list2img{
-    width:6vw;
-    height:3vw;
-}
-.profmob{
-    display:none;
-}
-.list2offer{
-    width:2vw;
 
-    margin-right:0.5vw;
-    height:2vw;
+.chevron {
+    font-size: 5vw;
 }
-.li{
-    display:flex;
-     margin-top:0.3vw;
+
+.chevron3 {
+    font-size: 5vw;
+    display: none;
+}
+
+.list2 {
+    list-style: none;
+    background: white;
+    transition: 1s;
+    height: 100% !important;
+    margin-top: 0vw;
+    z-index: 1;
+    padding-left: 1vw;
+    border-top-right-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+}
+
+.list2img {
+    width: 6vw;
+    height: 3vw;
+}
+
+.profmob {
+    display: none;
+}
+
+.list2offer {
+    width: 2vw;
+
+    margin-right: 0.5vw;
+    height: 2vw;
+}
+
+.li {
+    display: flex;
+    margin-top: 0.3vw;
     align-items: center;
-    padding-left:0.5vw;
-    padding-right:0.5vw;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
     justify-content: center;
 }
-.li2{
-    display:flex;
-    padding-left:0.5vw;margin-top:0.1vw;
-    align-items: center;margin-right:2.5vw;
+
+.li2 {
+    display: flex;
+    padding-left: 0.5vw;
+    margin-top: 0.1vw;
+    align-items: center;
+    margin-right: 2.5vw;
 }
-.li:hover{
+
+.li:hover {
     border-radius: 10px;
     cursor: pointer;
-background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
-}
-.li2:hover{
-    border-radius: 10px;color:white;
-    margin-right:1vw;cursor: pointer;
-    padding-left:0.5vw; padding-right:0.5vw;
-background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
-}
-.search{
-    width:25vw;
-    border-radius:0.4vw;
-    border-color:transparent;
-    font-size:1.1vw;
-    margin-left:-22vw;
-    padding-left:1vw;
-    height:3vw;
-    
-}
-.bookmarkmob{
-    display:none;
-}
-.tiki{
-    width:1.6vw;
-    height:2.5vw;
-    margin-left:3vw;
-}
-.tikimob{
-    display:none;
-}
-.noti{
-    width:1.6vw;height:2.5vw;
-    margin-left:1vw;
+    background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
 }
 
-.prof{
-    width:15vw;
-    margin-left:-2vw;
-    margin-top:-2.5vw;
-    height:10vw;
+.li2:hover {
+    border-radius: 10px;
+    color: white;
+    margin-right: 1vw;
+    cursor: pointer;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
+    background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
 }
-.img360{
-    width:4vw;
-    height:4vw;
+
+.search {
+    width: 25vw;
+    border-radius: 0.4vw;
+    border-color: transparent;
+    font-size: 1.1vw;
+    margin-left: -22vw;
+    padding-left: 1vw;
+    height: 3vw;
+
 }
-.plus360text{
+
+.bookmarkmob {
+    display: none;
+}
+
+.tiki {
+    width: 1.6vw;
+    height: 2.5vw;
+    margin-left: 3vw;
+}
+
+.tikimob {
+    display: none;
+}
+
+.noti {
+    width: 1.6vw;
+    height: 2.5vw;
+    margin-left: 1vw;
+}
+
+.prof {
+    width: 15vw;
+    margin-left: -2vw;
+    margin-top: -2.5vw;
+    height: 10vw;
+}
+
+.img360 {
+    width: 4vw;
+    height: 4vw;
+}
+
+.plus360text {
     background: linear-gradient(180deg, #FF8201 0%, #FFD600 100%);
 
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-font-size:1vw;
-font-weight: 900;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 1vw;
+    font-weight: 900;
 }
-.big360img{
-    width:8vw;
-    height:5vw;
+
+.big360img {
+    width: 8vw;
+    height: 5vw;
 }
-.chevron{
-    color:#8F00FF ;
-    font-size:2vw;
+
+.chevron {
+    color: #8F00FF;
+    font-size: 2vw;
 }
-.hamburger{
-    display:none;
-    
+
+.chevron3 {
+    color: #8F00FF;
+    font-size: 2vw;
 }
+
+.hamburger {
+    display: none;
+
+}
+
+#setli {
+    display: none;
+}
+
+#setli2 {
+    display: block;
+    margin-left: -0.6vw;
+}
+
 @media only screen and (max-width: 800px) {
-    .togglediv{
-        position:absolute;height: 100% !important; 
+    #setli {
+        display: block;
+        margin-left: 2vw;
+        margin-right: -3vw;
+        ;
     }
-    .first_ul{
-        display:none;
+
+    #setli2 {
+        display: none;
     }
-    .tiki{
-        display:none;
+
+    .togglediv {
+        position: absolute;
+        height: 150% !important;
     }
-    .tikimob{
-        display:block;
-        margin-left:3vw;
-        width:11vw;
-        height:11vw;
-        
+
+    .first_ul {
+        display: none;
     }
-    .navbar{
-        position:relative;
+
+    .tiki {
+        display: none;
     }
-    .bookmarkmob{
-        display:block;
-        z-index:0;
-        width:6.5vw;
-        height:6.5vw;
-        position:absolute;
-        left:-23.5vw;
-        top:1.5vw;
-       border:0.5vw solid #8F00FF;
-       border-radius:3vw;
-       padding:1vw;
+
+    .tikimob {
+        display: block;
+        margin-left: 3vw;
+        width: 11vw;
+        height: 11vw;
+
     }
-    .feedback{
-        display:none;
+
+    .navbar {
+        position: relative;
     }
-    .favourites{
-        display:none;
+
+    .bookmarkmob {
+        display: block;
+        z-index: 0;
+        width: 6.5vw;
+        height: 6.5vw;
+        position: absolute;
+        left: -23.5vw;
+        top: 1.5vw;
+        border: 0.5vw solid #8F00FF;
+        border-radius: 3vw;
+        padding: 1vw;
     }
-    .search{
-        font-size:5vw;
-        height:8vw;
-        width:45vw;position:relative;
-        margin-left:-11vw;
-      z-index:-1;
-        border-radius:4vw;
-        margin-top:2vw;
+
+    .feedback {
+        display: none;
     }
-  
-    .language{
-        display:none;
+
+    .favourites {
+        display: none;
     }
-    .noti{
-        width:6vw;
-        
-        height:6vw;
-        margin-top:3vw;
-        margin-left:3vw;
-        margin-right:3vw;
+
+    .search {
+        font-size: 5vw;
+        height: 8vw;
+        width: 45vw;
+        position: relative;
+        margin-left: -11vw;
+        z-index: -1;
+        border-radius: 4vw;
+        margin-top: 2vw;
     }
-    .prof{
-        display:none;
+
+    .language {
+        display: none;
     }
-    .profmob{
-        display:block;
-        width:14vw;
-        height:14vw;
-     
-        margin-top:-1vw;
-    }.plus360text{
-        font-size:5vw;
+
+    .noti {
+        width: 6vw;
+
+        height: 6vw;
+        margin-top: 3vw;
+        margin-left: 3vw;
+        margin-right: 3vw;
     }
-    .chevron{
-        display:none;
+
+    .prof {
+        display: none;
     }
-    .hamburger{
-        display:block;
-        width:8vw;
-        height:8vw;
-        font-size:100vw;
-          z-index:122;
-           margin-top:-29vw;
-           margin-left:-4vw;
-        color:#8F00FF;  
+
+    .profmob {
+        display: block;
+        width: 14vw;
+        height: 14vw;
+
+        margin-top: -1vw;
     }
-    .btnspan{
-        background:rgba(255, 255, 255, 0);
-        border:none;
-        position:absolute;
+
+    .plus360text {
+        font-size: 5vw;
     }
-    .toggle_but{
-        background:rgba(255, 255, 255, 0);
-        border:none;
-        margin-left:10vw;
-       
-        
+
+    .chevron {
+        display: none;
     }
-    .search_icon{
-        width:6vw;
-        height:6vw;
-        color:rgba(0, 0, 0, 0.505);
-        top:-7.5vw; left:-2vw;
+
+    .chevron3 {
+        display: block;
+        background: white;
+        border-radius: 100vw;
+        top: 70vw;
+        padding: 1.5vw;
+        height: 3vw;
+        width: 3vw;
+        border: 0.5vw solid #8F00FF;
     }
-    .search_but{
-        font-size:0.7vw;
-        margin-left:-7.5vw;
+
+    .chevrondiv {
+           
+        background: white;width:7vw; height:5vw;display:flex; align-items: center; justify-content: flex-end;
+        position: fixed;
+        left: 51vw; 
+        top: 80vw;
+        padding: 2vw;padding-right:1.8vw;padding-left:0vw;
+        border-radius: 100vw;
     }
-    .list2img{
-        width:30vw;
-        height:10vw;
+
+    .hamburger {
+        display: block;
+        width: 8vw;
+        height: 8vw;
+        font-size: 100vw;
+        z-index: 1;
+        margin-top: -29vw;
+        margin-left: -4vw;
+        color: #8F00FF;
     }
-    .list2{
-        width:50vw;
+
+    .btnspan {
+        background: rgba(255, 255, 255, 0);
+        border: none;
+        position: absolute;
+        z-index: 1;
+    }
+
+    .toggle_but {
+        background: rgba(255, 255, 255, 0);
+        border: none;
+        z-index: 1;
+        margin-left: 10vw;
+
+
+    }
+
+    .search_icon {
+        width: 6vw;
+        height: 6vw;
+        color: rgba(0, 0, 0, 0.505);
+        top: -7.5vw;
+        left: -2vw;
+    }
+
+    .search_but {
+        font-size: 0.7vw;
+        margin-left: -7.5vw;
+    }
+
+    .list2img {
+        width: 30vw;
+        height: 10vw;
+    }
+
+    .scroll {
+        overflow: scroll;
+        position: fixed;
+    }
+
+    .scroll1 {}
+
+    .list2div {
+        width: 120vw;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(8px);
+        height: 100% !important;
+        overflow: auto;
+        position: fixed;
+        z-index: 1;
+
+    }
+
+    .list2 {
+        width: 50vw;
+        padding-left: 3vw;
+        padding-right: 3vw;
         text-decoration: none;
-        height:220vw !important;
-        margin-top:20vw;
+        overflow: scroll;
+        height: 220vw !important;
+        position: absolute;
+        margin-top: 0vw;
         border-top-right-radius: 10vw;
-        border-bottom-right-radius:10vw; position:absolute;z-index:0;
+        border-bottom-right-radius: 10vw;
+        z-index: 2;
     }
-    .list2div{
-        width:120vw;
-        background: rgba(255, 255, 255, 0.2); 
-  backdrop-filter: blur(8px); 
-        height:300% !important;
-        position:absolute;z-index:11;
+
+    .alloffers {
+        font-size: 5vw;
     }
-    .alloffers{
-        font-size:5vw;
+
+    .tabicons {
+        gap: 4vw;
+        padding-bottom: 0vw;
+        margin-top: 15vw;
     }
-    .tabicons{
-         gap:4vw;
-         padding-bottom:0vw;
-         margin-top:15vw;
+
+    .tabicon {
+        width: 8vw;
+        height: 8vw;
     }
-    .tabicon{
-        width:8vw;
-        height:8vw;
+
+    .list2offer {
+        width: 10vw;
+        margin-right: 2vw;
+        height: 10vw;
     }
-    .list2offer{
-        width:10vw;
-        height:10vw;
+
+    .big360img {
+        width: 30vw;
+        margin-left: 2vw;
+        height: 20vw;
     }
-    .big360img{
-        width:30vw;
-        height:20vw;
-    }
-    .navbar{
-        margin-top:7vw;
+
+    .navbar {
+        margin-top: 7vw;
     }
 }
