--- a/components/navbar&toggle/profile_nav&toggle/pnavbar.module.css
+++ b/components/navbar&toggle/profile_nav&toggle/pnavbar.module.css
@@ -2,7 +2,7 @@
     display:flex;
     margin-top:2vw;
     align-items: center;
-    padding-bottom:2vw;
+    padding-bottom:0.5vw;margin-top:7vw;margin-left:0.8vw;
     gap:0.8vw;
   }
   .tabicons1{
@@ -10,7 +10,7 @@
     flex-direction: column;
     gap:1vw;
     margin-top:3vw;
-    margin-left:-0.5vw;
+   margin-left:0.8vw;
   }
   .tabicon{
     width:1.7vw;
@@ -21,6 +21,7 @@
     display:flex;
     margin-left:40vw;
     margin-top:1.5vw;
+   
 }
 .links{
     text-decoration: none;
@@ -93,24 +94,24 @@
 .first_ul{
         list-style:none;
         transition:1s;
-       
+       margin-top:0vw;
         background:white;
      border:0.3vw solid white;
         width:3vw;
-        padding-right:1vw;
+        padding-right:1vw; padding-left:1vw;
         border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
 }
 
 .togglediv{
-   display:flex;
-   transition:1s;
- margin-top:-1vw;
-   position:absolute;
-z-index:1;
-   width:10vw;
-   transition:1s;
-
-}
+    display:flex;
+    transition:1s;
+   margin-top:-3vw;
+    position:fixed;
+ z-index:1;
+ padding:0;
+    transition:1s;
+ 
+ }
 .btnspan{
     display:inline-block;
     display:flex;
@@ -143,10 +144,10 @@ z-index:1;
 }
 .list2{
     list-style:none;  background:white;
-    transition:1s;
- margin-left:-1vw;
+    transition:1s;height:100% !important;
+ margin-top:0vw;
  z-index:1;
-    width:12vw;
+    padding-left:1vw;
     border-top-right-radius: 1vw; border-bottom-right-radius: 1vw;
 }
 .list2img{
@@ -164,15 +165,16 @@ z-index:1;
 }
 .li{
     display:flex;
-     margin-top:1vw;
+     margin-top:0.3vw;
     align-items: center;
-    margin-left:-2vw;
+    padding-left:0.5vw;
+    padding-right:0.5vw;
     justify-content: center;
 }
 .li2{
     display:flex;
-    padding-left:1vw;margin-left:-1vw;
-    align-items: center;
+    padding-left:0.5vw;margin-top:0.1vw;
+    align-items: center;margin-right:2.5vw;
 }
 .li:hover{
     border-radius: 10px;
@@ -191,6 +193,7 @@ background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
     border-color:transparent;
     font-size:1.1vw;
     margin-left:-22vw;
+    margin-right:7vw;
     padding-left:1vw;
     height:3vw;
     
@@ -219,7 +222,7 @@ background: linear-gradient(180deg, #A763DD 0%, #F06BF2 100%);
 }
 .img360{
     width:4vw;
-    height:4vw;margin-left:-2vw;
+    height:4vw;margin-left:-0.5vw;
 }
 .plus360text{
     background: linear-gradient(180deg, #FF8201 0%, #FFD600 100%);
@@ -242,12 +245,22 @@ font-weight: 900;
     display:none;
     
 }
+.mobile{
+    display:none;
+}
 @media only screen and (max-width: 800px) {
     .first_ul{
         display:none;
     }
+    .mobile{
+        display:block;
+    }
     .tiki{
         display:none;
+    }
+    .togglediv{
+        position:absolute;
+        margin-top:-8vw;
     }
     .tikimob{
         display:block;
@@ -328,7 +341,7 @@ font-weight: 900;
         height:8vw;
         font-size:100vw;
           z-index:122;
-           margin-top:-40vw;
+           margin-top:-25vw;
            margin-left:-3vw;
         color:#8F00FF;  
     }
@@ -347,8 +360,9 @@ font-weight: 900;
     .search_icon{
         width:6vw;
         height:6vw;
-        color:rgba(0, 0, 0, 0.505);
-        top:1.5vw; left:-41vw;
+        color:rgba(0, 0, 0, 0.505);position:absolute;
+          left:-19vw;
+          top:3.6vw;
     }
     .search_but{
         font-size:0.7vw;
@@ -362,7 +376,7 @@ font-weight: 900;
         width:50vw;
         text-decoration: none;
         height:220vw;
-        margin-top:13vw;
+        margin-top:20vw;
         border-top-right-radius: 10vw;
         border-bottom-right-radius:10vw; position:absolute;z-index:0;
     }
@@ -371,7 +385,7 @@ font-weight: 900;
        
         background: rgba(255, 255, 255, 0.2); 
   backdrop-filter: blur(8px); 
-        height:200vw;
+        height:220vw;
         position:absolute;z-index:11;
     }
     .alloffers{
@@ -380,7 +394,7 @@ font-weight: 900;
     .tabicons{
          gap:4vw;
          padding-bottom:0vw;
-         margin-top:15vw;
+         margin-top:13vw;
     }
     .tabicon{
         width:8vw;
