--- a/components/navbar&toggle/profile_nav&toggle/pnavbar.module.css
+++ b/components/navbar&toggle/profile_nav&toggle/pnavbar.module.css
@@ -319,9 +319,10 @@ font-weight: 900;
         display:none;
     }
     .X{
-        width:12vw;
-        height:12vw;
-        margin-right:3vw;
+        width:10vw;
+        height:10vw;
+        margin-right:3.5vw;
+        margin-top:0.7vw;
     }
     .profmob{
         display:none;
