--- a/components/navbar&toggle/navbar.module.css
+++ b/components/navbar&toggle/navbar.module.css
@@ -2,12 +2,14 @@
     display: flex;
     margin-top: 2vw;
     align-items: center;
-    padding-bottom: 0.5vw;
+
     margin-top: 7vw;
     margin-left: 0.8vw;
     gap: 0.8vw;
 }
-
+.logout{
+    margin-bottom:1vw;
+}
 .tabicons1 {
     display: flex;
     flex-direction: column;
@@ -137,7 +139,7 @@
     transition: 1s;
 
     position: fixed;
-    z-index: 1;
+    z-index: 9;
     padding: 0;
     transition: 1s;
 
@@ -190,7 +192,7 @@
     background: white;
     transition: 1s;
     height: 100% !important;
-    margin-top: 0vw;
+    margin-top: 0vw;z-index:-1;
     z-index: 1;
     padding-left: 1vw;
     border-top-right-radius: 1vw;
